# Openssh

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  docker-compose.yml  install.sh
.github/workflows/: release.yml
app/: App.tsx  app.json  eas.json  package-lock.json  package.json
app/src/api/: relay.ts
app/src/hooks/: useRelaySocket.ts
app/src/screens/: AuthScreen.tsx  DashboardScreen.tsx  FileBrowserScreen.tsx  HostDetailScreen.tsx  SetupScreen.tsx  TerminalScreen.tsx
client/: Cargo.toml
client/src/: main.rs
desktop/: main.js  package-lock.json  package.json
desktop/src/: app.js  index.html  preload.js  styles.css
host/: Cargo.toml
host/src/: main.rs
relay/: Cargo.toml
relay/src/: db.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  qr.rs
website/: dashboard.html  index.html  script.js  style.css
