[workspace]
members = [
    "relay",
    "host",
    "client",
    "shared",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
russh = "0.44"
russh-keys = "0.44"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
